# gee-water

./: .gitignore  README.md  setup.cfg
gee_repo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gee_water.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: basin_analysis.ipynb  development.ipynb  ndvi_baja.ipynb
src/gee_water/: analysis.py  masks.py  utils.py  vis_params.py  visualization_utils.py
src/gee_water.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/html/: ndvi_test.html  ndvi_test_2.html  reflectance_test.html
