# # Instructions here:
# # https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# # Big example here: https://github.com/pallets/flask/blob/main/setup.cfg


# [metadata]
# name = gee-water

# [options]
# packages = find_namespace:
# python_requires = >= 3.9
# zip_safe = False
# install_requires =
#     numpy



# # [options.packages.find]
# # include = gee-water.*

# [options.extras_require]
# dev =
#     pre-commit
#     black
#     httpx
#     requests

# [tool.black]
# line-length = 88
# include = '\.pyi?$'
# exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

# [flake8]
# max-line-length = 88
# exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
# ignore=E741,F403,E265,W504,E226,W503,E501,E203


# [mypy]
# ignore_missing_imports = True
# pretty = True
# show_error_codes = True
# show_error_context = True
# show_traceback = True

[metadata]
name = gee_repo
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Repository for running GEE code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/gee_repo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    geemap
    earthengine-api
    pandas
    matplotlib
    numpy

[options.extras_require]
dev =
    black
    isort
    flake8
    pre-commit

[options.package_data]
* = *.txt, *.md
