# Instructions here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# Big example here: https://github.com/pallets/flask/blob/main/setup.cfg


[metadata]
name = gee_water

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
    numpy
    pandas
    earthengine-api
    geemap
    plotly
package_dir =
    = src

[options.packages.find]
where = src
include = gee_water*

[options.extras_require]
dev =
    pre-commit
    black
    httpx
    requests

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203


[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
